--- a/index.html
+++ b/index.html
@@ -10,281 +10,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <title>Splice</title>
   <meta name="description" content="Splice content">
+  <script src="js/index.js" defer></script>
 </head>
 <body>
-  <header class="header">
-    <nav class="header__nav">
-      <ul class="header__nav-list">
-        <li class="header__nav-item">
-          <a href="#" class="header__nav-link header__nav-link--logo">
-            <img src="./assets/img/logo.png" alt="logo" class="header__nav-logo">
-          </a>
-        </li>
-        <li class="header__nav-item">
-          <a href="#" class="header__nav-link">Sounds</a>
-        </li>
-        <li class="header__nav-item">
-          <a href="#" class="header__nav-link">Skills</a>
-        </li>
-        <li class="header__nav-item">
-          <a href="#" class="header__nav-link">Plugins</a>
-        </li>
-        <li class="header__nav-item">
-          <a href="#" class="header__nav-link">Studio</a>
-        </li>
-        <li class="header__nav-item">
-          <a href="#" class="header__nav-link">Community</a>
-        </li>
-        <li class="header__nav-item">
-          <a href="#" class="header__nav-link">Blog</a>
-        </li>
-        <li class="header__nav-item">
-          <a href="#" class="header__nav-link">Pricing</a>
-        </li>
-      </ul>
-
-      <div class="header__nav-controls">
-        <button>Login</button>
-
-        <button class="btn--secondary">Sign up</button>
-      </div>
-
-      <img
-        src="./assets/img/burger.svg"
-        alt="burger"
-        class="header__mobile-burger"
-      >
-    </nav>
-  </header>
+  <header class="header"></header>
 
   <main class="main">
-    <section class="banner">
-      <p class="banner__text">🤘 Get free Sounds when you start a trial & 4 months off a Sounds+ annual plan.</p>
 
-      <button class="banner__btn">
-        Click here
-      </button>
-    </section>
+    <section class="banner"></section>
 
-    <section class="hero">
-      <img
-        src="./assets/img/hero-background.png"
-        alt="hero-background"
-        class="hero__background"
-      >
+    <section class="hero"></section>
 
-      <div class="container">
-        <h1 class="hero__title">Step into the producer’s playground</h1>
+    <section class="sounds features features--reverse container"></section>
 
-        <p class="hero__subtitle">
-          Explore the world’s best sample library and an unmatched marketplace of plugins and DAWs.
-        </p>
+    <section class="connectedExperience features container"></section>
 
-        <button class="btn--primary">
-          Try free
-        </button>
+    <section class="gear features features--reverse container"></section>
 
-        <div class="hero__more">
-          <p class="hero__more-text">Learn more</p>
+    <section class="technology features container"></section>
 
-          <img
-            src="./assets/img/chevron-down.png"
-            alt="chevron-down"
-            class="hero__more-icon"
-          >
-        </div>
-      </div>
-    </section>
+    <section class="cards container"></section>
 
-    <section class="features features--reverse container">
-      <div class="features__text-content">
-        <p class="features__label">SOUNDS</p>
-
-        <h2 class="features__title">A catalog so deep, it’s dangerous.</h2>
-
-        <p class="features__subtitle">Expertly created and curated samples in any style imaginable. Start swimming in sound.</p>
-
-        <button class="features__btn btn--primary">
-          Explore sounds
-        </button>
-      </div>
-
-      <img
-        src="./assets/img/sounds.png"
-        alt="sounds"
-        loading="lazy"
-        class="features__img"
-      />
-    </section>
-
-    <section class="features container">
-      <img
-        src="./assets/img/connected-experience.png"
-        alt="connected-experience"
-        loading="lazy"
-        class="features__img"
-      />
-
-      <div class="features__text-content">
-        <p class="features__label">Connected Experience</p>
-
-        <h2 class="features__title">A workflow that actually flows.</h2>
-
-        <p class="features__subtitle">Preview samples in your track’s key and tempo, drag and drop sounds into your DAW, and organize your favorite samples, MIDI and presets in one place.</p>
-      </div>
-    </section>
-
-    <section class="features features--reverse container">
-      <div class="features__text-content">
-        <p class="features__label">Gear</p>
-
-        <h2 class="features__title">Build a drool-worthy studio, affordably.</h2>
-
-        <p class="features__subtitle">The industry’s top software, all in one place, on payment plans built to work for you.</p>
-
-        <button class="features__btn btn--primary">
-          Explore Gear
-        </button>
-      </div>
-
-      <img
-        src="./assets/img/gear.png"
-        alt="gear"
-        loading="lazy"
-        class="features__img"
-      />
-    </section>
-
-    <section class="features container">
-      <img
-        src="./assets/img/technology.png"
-        alt="technology"
-        loading="lazy"
-        class="features__img"
-      />
-
-      <div class="features__text-content">
-        <p class="features__label">Technology</p>
-
-        <h2 class="features__title">Crate dig without the dust.</h2>
-
-        <p class="features__subtitle">Our intelligent search tools help you discover sounds you would normally have to dig to find. Tech breaks the sweat, not you.</p>
-
-        <button class="features__btn btn--primary">
-          Discover CoSo
-        </button>
-      </div>
-    </section>
-
-    <section class="cards container">
-      <h2 class="cards__title">
-        What creators are saying about Splice
-      </h2>
-
-      <div class="cards__content">
-        <div class="card">
-          <img
-            src="./assets/img/card-1.png"
-            alt="card-1"
-            class="card__img"
-            loading="lazy"
-          >
-
-          <p class="card__text">
-            I can always find what I’m looking for on Splice, whether it’s the exact sound I want or just a bit of inspiration.
-          </p>
-
-          <p class="card__author">
-            Andrew Huang
-          </p>
-        </div>
-
-        <div class="card">
-          <img
-            src="./assets/img/card-2.png"
-            alt="card-2"
-            class="card__img"
-            loading="lazy"
-          >
-
-          <p class="card__text">
-            Finally a way to buy plugins that works. By paying a little at a time, producers can get legit access to the top VSTs.
-          </p>
-
-          <p class="card__author">
-            KSHMR
-          </p>
-        </div>
-
-        <div class="card">
-          <img
-            src="./assets/img/card-3.png"
-            alt="card-3"
-            class="card__img"
-          >
-
-          <p class="card__text">
-            It’s been fun to dive into Splice’s creator community and explore tools that support my own creative process.
-          </p>
-
-          <p class="card__author">
-            Kesha Lee
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section class="hero-footer">
-      <img
-        class="hero-footer__background"
-        src="./assets/img/footer-hero-background.png"
-        alt="footer-hero"
-      >
-
-      <h2 class="hero-footer__title">
-        Try Splice today
-      </h2>
-
-      <button class="btn--primary">
-        Start now
-      </button>
-    </section>
+    <section class="hero-footer"></section>
+    
   </main>
 
-  <footer class="footer">
-    <ul class="footer__list container">
-      <li class="footer__rights">
-        © 2022 Splice.com All Rights Reserved
-      </li>
-      <li class="footer__link-item">
-        <a href="#" class="footer__link">Terms of Use</a>
-      </li>
-      <li class="footer__link-item">
-        <a href="#" class="footer__link">Privacy Policy</a>
-      </li>
-      <li class="footer__link-item">
-        <a href="#" class="footer__link">Jobs</a>
-      </li>
-      <li class="footer__link-item">
-        <a href="#" class="footer__link">Contact</a>
-      </li>
-      <li class="footer__link-item">
-        <a href="#" class="footer__link">Help</a>
-      </li>
-      <li class="footer__link-item">
-        <a
-          href="https://facebook.com"
-          target="_blank"
-          class="footer__link"
-        >
-          <img
-            src="./assets/img/facebook.png"
-            alt="facebook"
-            class="footer__social-icon"
-          >
-        </a>
-      </li>
-    </ul>
-  </footer>
+  <footer class="footer"></footer>
 </body>
 </html>
